--- a/Mapper/App.config
+++ b/Mapper/App.config
@@ -1,16 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="ScriptModule.Properties.ApplicationSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="ScriptModule.Properties.UserSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="Bodyview3EntitiesConnectionString" connectionString="metadata=res://*/DAL.ScriptModuleModel.csdl|res://*/DAL.ScriptModuleModel.ssdl|res://*/DAL.ScriptModuleModel.msl;provider=Devart.Data.PostgreSql;provider connection string=&quot;User Id=postgres;Password=Banek12;Host=85.92.146.196;Database=bodyview3;Persist Security Info=False;Initial Schema=public&quot;"
-      providerName="System.Data.EntityClient" />
+    <add name="Bodyview3EntitiesConnectionString" connectionString="metadata=res://*/DAL.ScriptModuleModel.csdl|res://*/DAL.ScriptModuleModel.ssdl|res://*/DAL.ScriptModuleModel.msl;provider=Devart.Data.PostgreSql;provider connection string=&quot;User Id=postgres;Password=Banek12;Host=85.92.146.196;Database=bodyview3;Persist Security Info=False;Initial Schema=public&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
