--- a/Mapper/ScriptModule.csproj
+++ b/Mapper/ScriptModule.csproj
@@ -171,6 +171,7 @@
     <Compile Include="Designers\InputLocalFile\InputLocalFileScriptDesigner.xaml.cs">
       <DependentUpon>InputLocalFileScriptDesigner.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Designers\IWindowManger.cs" />
     <Compile Include="Designers\OutputLocalFile\OutputLocalFileScriptDesigner.xaml.cs">
       <DependentUpon>OutputLocalFileScriptDesigner.xaml</DependentUpon>
     </Compile>
