--- a/Mapper/ScriptModule.csproj
+++ b/Mapper/ScriptModule.csproj
@@ -38,6 +38,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <UseVSHostingProcess>true</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -138,6 +139,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Utils\BindingHelper.cs" />
     <Compile Include="Controls\Editor.xaml.cs">
       <DependentUpon>Editor.xaml</DependentUpon>
       <SubType>Component</SubType>
@@ -171,7 +173,7 @@
     <Compile Include="Designers\InputLocalFile\InputLocalFileScriptDesigner.xaml.cs">
       <DependentUpon>InputLocalFileScriptDesigner.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Designers\IWindowManger.cs" />
+    <Compile Include="Designers\WindowManger.cs" />
     <Compile Include="Designers\OutputLocalFile\OutputLocalFileScriptDesigner.xaml.cs">
       <DependentUpon>OutputLocalFileScriptDesigner.xaml</DependentUpon>
     </Compile>
@@ -521,6 +523,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Designers\OutputDatabase\" />
+    <Folder Include="Images\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
