--- a/Mapper/App.config
+++ b/Mapper/App.config
@@ -9,7 +9,7 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="Bodyview3EntitiesConnectionString" connectionString="metadata=res://*/DAL.ScriptModuleModel.csdl|res://*/DAL.ScriptModuleModel.ssdl|res://*/DAL.ScriptModuleModel.msl;provider=Devart.Data.PostgreSql;provider connection string=&quot;User Id=postgres;Password=Banek12;Host=85.92.146.196;Database=bodyview3;Persist Security Info=False;Initial Schema=public&quot;" providerName="System.Data.EntityClient" />
+    <add name="Bodyview3EntitiesConnectionString" connectionString="metadata=res://*/DAL.ScriptModuleModel.csdl|res://*/DAL.ScriptModuleModel.ssdl|res://*/DAL.ScriptModuleModel.msl;provider=Devart.Data.PostgreSql;provider connection string=&quot;User Id=postgres;Password=Banek12;Host=85.92.146.196;Database=dubaiprint;Persist Security Info=False;Initial Schema=public&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
